feat: Saving work,working order. Demo version 09.

--- a/src/main/webapp/Walkthrough37/view/Detail.view.xml
+++ b/src/main/webapp/Walkthrough37/view/Detail.view.xml
@@ -24,7 +24,7 @@
 				<ObjectAttribute title="{i18n>quantityTitle}" text="{invoice>Quantity}"/>
 
 				<ObjectAttribute title="{i18n>dateTitle}" text="{
-				 formatOptions: { pattern: 'yyyy-MM-ddTHH:mm:ss' },
+				 formatOptions: { pattern: 'yyyy-MM-dd HH:mm' },
 				 path: 'invoice>ShippedDate',
 				 type: 'sap.ui.model.odata.type.DateTimeOffset' }"
 				/>
