feat: P0000Projects interface updated, No working order, no update function. Demo version 25.

--- a/src/main/webapp/P0000Projects/view/Detail.view.xml
+++ b/src/main/webapp/P0000Projects/view/Detail.view.xml
@@ -51,9 +51,9 @@
                                growing="true"
                                growingThreshold="5"
                                includeItemInSelection="false"
-                               items="{ path: '/ProjMembers',
-						parameters: {$select:'Nickname,FullName,Gender,UserName',
-						$count: true, $$updateGroupId : 'UserGroup' } }"
+                               items="{ path: '/P0000ProjMembersEntities',
+                               parameters: {$count: true,
+                               $$updateGroupId : 'UserGroup'}}"
                                mode="SingleSelectLeft"
                                noDataText="No User found"
                                select=".onSelection"
