feat: Working order, no update function. Demo version 34.

--- a/src/main/webapp/A0000Users/view/Detail.view.xml
+++ b/src/main/webapp/A0000Users/view/Detail.view.xml
@@ -40,7 +40,7 @@
                                     <Text id="gender"
                                           text="{= ${Gender} === 'M'?'Male': (${Gender} === 'F'?'Female':'Unknown')}"/>
                                     <Label design="Bold" text="User Birthday"/>
-                                    <Text text="{Birthday}"/>
+                                    <Text text="{BirthDay}"/>
                                     <Label design="Bold" text="Nationality"/>
                                     <Text text="{Nationality}"/>
                                     <Label design="Bold" text="Citizen Service Number"/>
