--- a/src/main/webapp/A0000Users/view/Detail.view.xml
+++ b/src/main/webapp/A0000Users/view/Detail.view.xml
@@ -9,7 +9,7 @@
                     <Image src="images/GreenTrakLogo.svg" height="30px"/>
                 </contentLeft>
                 <contentMiddle>
-                    <Label id="header" design="Bold" text="{i18n>title}"/>
+                    <Label id="header" design="Bold" text="{i18n>title2} {FullName}"/>
                 </contentMiddle>
                 <contentRight>
                     <OverflowToolbar id="otbFooter">
@@ -91,6 +91,100 @@
                                 </f:content>
                             </f:SimpleForm>
                         </VBox>
+                    </IconTabFilter>
+                    <IconTabFilter key="timesheet" text="Timesheet" icon="sap-icon://timesheet">
+                        <VBox class="sapUiSmallMargin">
+                            <Table id="employeesTable" alternateRowColors="true"
+                                   items="{ path: 'attendanceEventMod>/AttendanceEventsAllEntities',
+                        parameters: {$select:'StartDate'},
+                        sorter : { descending: true, group : true, path : 'StartDate' },
+                        filters: [{path: 'ParentGuid', operator: 'EQ', value1: null}],
+                        groupHeaderFactory: '.getGroupHeader'
+                      }"
+                                   itemPress=".onItemPressed">
+                                <headerToolbar>
+                                    <Toolbar>
+                                        <Title text="Attendance events content" level="H2"/>
+                                        <ToolbarSpacer/>
+                                        <DateRangeSelection maxDate="{:= ${appModel>/now}}" change=".handleChange"
+                                                            displayFormat="yyyy-MM-dd" tooltip="View Filter Settings" width="15em"/>
+                                        <Button icon="sap-icon://sort" press=".onSortButtonPressed"/>
+                                    </Toolbar>
+                                </headerToolbar>
+                                <columns>
+                                    <Column id="employeeIDCol">
+                                        <header>
+                                            <Text text="Project Code"/>
+                                        </header>
+                                    </Column>
+                                    <Column id="firstNameCol" hAlign="Right" demandPopin="true">
+                                        <header>
+                                            <Text text="Check-in"/>
+                                        </header>
+                                    </Column>
+                                    <Column id="lastNameCol" hAlign="Right" demandPopin="true">
+                                        <header>
+                                            <Text text="Check-out"/>
+                                        </header>
+                                        <footer>
+                                            <Text text="Totals:"/>
+                                        </footer>
+                                    </Column>
+                                    <Column id="lastNameCol0" hAlign="Right" demandPopin="true">
+                                        <header>
+                                            <Text text="Attended time"/>
+                                        </header>
+                                        <footer>
+                                        </footer>
+                                    </Column>
+                                    <Column id="lastNameCol1" hAlign="Right" demandPopin="true">
+                                        <header>
+                                            <Text text="Time worked"/>
+                                        </header>
+                                        <footer>
+                                        </footer>
+                                    </Column>
+                                    <Column id="addressCol" minScreenWidth="Tablet" demandPopin="true">
+                                        <header>
+                                            <Text text="Description"/>
+                                        </header>
+                                    </Column>
+                                    <Column id="cityCol" minScreenWidth="Tablet" demandPopin="true">
+                                        <header>
+                                            <Text text="Approval by"/>
+                                        </header>
+                                    </Column>
+                                    <Column id="regionCol" minScreenWidth="Tablet" demandPopin="true">
+                                        <header>
+                                            <Text text="Approved at"/>
+                                        </header>
+                                    </Column>
+                                    <Column id="postalCodeCol" minScreenWidth="Tablet" demandPopin="true">
+                                        <header>
+                                            <Text text="Remarks"/>
+                                        </header>
+                                    </Column>
+                                </columns>
+                                <items>
+                                    <ColumnListItem id="item0" type="Navigation" press=".onItemPress">
+                                        <cells>
+                                            <Text text="{attendanceEventMod>ProjectCode}"/>
+                                            <Text text="{ type: 'sap.ui.model.odata.type.DateTimeOffset', formatOptions: { pattern: 'HH:mm' }, path: 'attendanceEventMod>CheckInDateTime' }"/>
+                                            <Text text="{ type: 'sap.ui.model.odata.type.DateTimeOffset', formatOptions: { pattern: 'HH:mm' }, path: 'attendanceEventMod>CheckOutDateTime' }"/>
+                                            <ObjectNumber
+                                                    number="{parts: [ {path: 'attendanceEventMod>CheckInDateTime', type: 'sap.ui.model.type.String'}, {path: 'attendanceEventMod>CheckOutDateTime', type: 'sap.ui.model.type.String'}], formatter: '.computeDuration'}"/>
+                                            <ObjectNumber
+                                                    number="{parts: [ {path: 'attendanceEventMod>CheckInDateTime', type: 'sap.ui.model.type.String'}, {path: 'attendanceEventMod>CheckOutDateTime', type: 'sap.ui.model.type.String'}], formatter: '.computeDuration'}"/>
+                                            <Text text="{attendanceEventMod>Description}"/>
+                                            <Text text="{attendanceEventMod>ApprovalBy}"/>
+                                            <Text text="{path: 'attendanceEventMod>ApprovalDateTime', type: 'sap.ui.model.odata.type.DateTimeOffset', formatOptions: {pattern: 'yyyy-MM-dd HH:mm'}}"/>
+                                            <Text text="{attendanceEventMod>Remarks}"/>
+                                        </cells>
+                                    </ColumnListItem>
+                                </items>
+                            </Table>
+                        </VBox>
+
                     </IconTabFilter>
                     <IconTabFilter key="account" text="Account Info" icon="sap-icon://account">
                         <VBox class="sapUiSmallMargin">
