feat: Plunker versions added. Working order, no update function. Demo version 38.

--- a/src/main/webapp/Berg/view/Detail.view.xml
+++ b/src/main/webapp/Berg/view/Detail.view.xml
@@ -55,7 +55,7 @@
         />
         <Button id="cancelBtn"
           text="Cancel"
-          press=".onCancelPress"
+          press=".reset"
         />
       </OverflowToolbar>
     </footer>
